@@ -2,6 +2,9 @@ WIAPASCAL CHANGE LOG
 ======================
 
 2024/11/
+        12 Added DocHandling in Download;
+	   Changed SettingsForm the Way duplex radiobutton enabled/checked;
+	   Select/Settings Form auto destruct after execute;
         11 GetParamsCapabilities and SetParams only if ItemCategory<>wicAUTO;
 	   Commented exception when Get/Set Params and Capabilities;
 	   Added define UI_Tests for testing UI if Feeder or Range Editor Resolution;
